fixed screen overflow after multiplying or dividing large numbers

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   align-items: center;
   gap: 15px;
   border-radius: 10px;
+  border: 2px solid rgb(32, 91, 95);
 }
 
 #screen {
@@ -36,13 +37,14 @@ body {
   height: 60px;
   background-color: rgb(70, 70, 70);
   border-radius: 10px;
+  border: 3px solid rgb(32, 91, 95);
   padding: 5px;
 }
 
 #screen-number {
   height: 35px;
   font-size: 35px;
-  color: lightgrey;
+  color: wheat;
   display: flex;
   justify-content: right;
 }
@@ -51,7 +53,7 @@ body {
   height: 15px;
   font-size: 13px;
   font-weight: 700;
-  color: lightgrey;
+  color: wheat;
   display: flex;
   justify-content: right;
 }
@@ -59,7 +61,6 @@ body {
 #buttons {
   width: 250px;
   height: 290px;
-  background-color: rgb(70, 70, 70);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -76,6 +77,7 @@ body {
   background-color: rgb(68, 109, 109);
   color: lightgrey;
   font-size: 18px;
+  border: 1px solid rgb(32, 91, 95);
 }
 
 #main-buttons {
@@ -88,6 +90,7 @@ body {
 #main-buttons button {
   border-style: none;
   border-radius: 5px;
+  border: 1px solid rgb(32, 91, 95);
   margin: 5px;
   width: 50px;
   height: 50px;
